# dtu_mlops

.dvc/: config
Exercise2/: .gitignore  Makefile  README.md  index.html  pyproject.toml
Exercise2/Exercise2/: __init__.py
Exercise2/dockerfiles/: trainer.dockerfile
Exercise2/docs/: index.html  mkdocs.yaml
Exercise2/docs/source/: index.html  index.md
s4_debugging_and_logging/exercise_files/: access_profiling.py  loggertryout.py  profiling_results  profiling_results.prof  profiling_results.txt  torch_profiler.py  trace.json  vae_mnist_working.py
s4_debugging_and_logging/exercise_files/log/resnet18/: LAPTOP-9O0UDD7Q_19620.1704702827041885100.pt.trace.json
s4_debugging_and_logging/exercise_files/tests/: __init__.py  test_data.py  test_model.py
s4_debugging_and_logging/exercise_files/tests/wandb/run-20240108_140218-6wfo005l/: run-6wfo005l.wandb
s4_debugging_and_logging/exercise_files/tests/wandb/run-20240108_143503-pl69icsy/: run-pl69icsy.wandb
s4_debugging_and_logging/exercise_files/tests/wandb/run-20240108_143911-am4xdfq3/: run-am4xdfq3.wandb
s4_debugging_and_logging/exercise_files/tests/wandb/run-20240108_144308-rkfyommz/: run-rkfyommz.wandb
s4_debugging_and_logging/exercise_files/wandb/run-20240108_105112-3uuxqu14/: run-3uuxqu14.wandb
s4_debugging_and_logging/exercise_files/wandb/run-20240108_112545-zg825qjp/: run-zg825qjp.wandb
s4_debugging_and_logging/exercise_files/wandb/run-20240108_112904-fdf4rhkr/: run-fdf4rhkr.wandb
search/: search_index.json
(+31 files in other folders)
